tests/NormalTests/paczka1/fuzzy1/47492311.err
Error in line 27: egzYvy S76 8,6
Error in line 35: TC5JcM S76 48,04
Error in line 24: lNql5Y80xfx A299 96,3
Error in line 32: egzYvy A382 50,4
